--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react-dom": "^18.2.0",
     "react-just-parallax": "^3.1.16",
     "react-router-dom": "^6.22.1",
-    "scroll-lock": "^2.1.5"
+    "scroll-lock": "^2.1.5",
+    "sweetalert2": "^11.26.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.55",
